# sk_renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mingw-toolchain.cmake
android/: AndroidBuild.cmake  AndroidManifest.xml  android_main.c
cmake/: FindVulkan.cmake  mingw-toolchain.cmake
example/: CMakeLists.txt  app.c  app.h  bloom.c  bloom.h  float_math.h  main.c  scene.h  scene_3d_texture.c  scene_array_texture.c  scene_bc1.c  scene_cloth.c  scene_cubemap.c  scene_gaussian_splat.c  scene_gltf.c  scene_impostor.c  scene_lifetime_stress.c  scene_meshes.c  scene_orbital_particles.c  scene_reaction_diffusion.c  scene_shadows.c  scene_stars.c  scene_tex_compress.c  scene_tex_copy.c  scene_text.c  scene_util.c  scene_util.h  scene_video.c  scene_yuv_test.c
example/android/: AndroidBuild.cmake  AndroidManifest(XR).xml  AndroidManifest.xml  AndroidManifest_Debug.xml  debug.keystore
example/assets/: DamagedHelmet.glb  test_cube.ply
example/assets/shaders/: bloom_composite.hlsl  bloom_downsample.hlsl  bloom_upsample.hlsl  common.hlsli  compute_test.hlsl  cubemap_mipgen.hlsl  cubemap_reflection.hlsl  cubemap_skybox.hlsl  equirect_to_cubemap.hlsl  gaussian_splat.hlsl  gaussian_splat_radix.hlsl  gaussian_splat_sort.hlsl  gpu_sort_common.hlsli  gpu_sort_downsweep.hlsl  gpu_sort_init.hlsl  gpu_sort_scan.hlsl  gpu_sort_upsweep.hlsl  mipgen_alpha_weighted_render.hlsl  orbital_particles.hlsl  orbital_particles_compute.hlsl  pbr.hlsl  pbr.hlsli  shadow_caster.hlsl  shadow_receiver.hlsl  stars.hlsl  stereo_display.hlsl  test.hlsl  text.hlsl  texture3d.hlsl  unlit.hlsl  video.hlsl  video_ahb.hlsl  yuv_unlit.hlsl
example/imgui_backend/: README.md  imgui.hlsl  imgui.hlsl.h  imgui_impl_sk_renderer.cpp  imgui_impl_sk_renderer.h  imgui_sdl2_wrapper.cpp
example/text/: text.c  text.h  text_internal.h
example/tools/: float_math.h  micro_ply.h  scene_util.c  scene_util.h  tex_compress.c  tex_compress.h  video.c  video.h  video_android.c
example_xr/: AndroidManifest.xml  CMakeLists.txt  app_xr.c  app_xr.h  main.c  openxr_util.h
sk_renderer/: skr_log.c  skr_log.h  sksc_file.c
sk_renderer/include/: sk_renderer.h  sksc_file.h
sk_renderer/threads/: threads.h
sk_renderer/tools/: arena.c  arena.h
sk_renderer/vk/: _sk_renderer.h  skr_buffer.c  skr_command.c  skr_compute.c  skr_conversions.c  skr_conversions.h  skr_debug.c  skr_destroy_list.c  skr_initialize.c  skr_material.c  skr_mesh.c  skr_pipeline.c  skr_pipeline.h  skr_render_list.c  skr_renderer.c  skr_shader.c  skr_shader.h  skr_surface.c  skr_texture.c  skr_upload.c  skr_vulkan.h
skshaderc/: CMakeLists.distribute.txt  CMakeLists.txt  _sksc.h  array.h  main.cpp  sksc.cpp  sksc.h  sksc_hlsl.cpp  sksc_log.cpp  sksc_meta.cpp
skshaderc/tests/: global_struct_test.hlsl  storage_buffer_test.hlsl  test_duplicate_slot.hlsl
